--- a/example/feature/pom.xml
+++ b/example/feature/pom.xml
@@ -12,17 +12,9 @@
 	<artifactId>github-maven-example-feature</artifactId>
 	<packaging>eclipse-feature</packaging>
 
+
 	<name>GitHub Maven Plugin Example - Feature</name>
 	<url>https://github.com/funthomas424242/github-maven-example/feature</url>
-
-	<dependencies>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
-
 
 
 	<build>
@@ -34,9 +26,22 @@
 				<extensions>true</extensions>
 			</plugin>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-resources-plugin</artifactId>
-				<version>2.5</version>
+				<groupId>com.github.github</groupId>
+				<artifactId>site-maven-plugin</artifactId>
+				<version>${github.maventools.version}</version>
+				<configuration>
+					<message>Building site for ${project.version}</message>
+					<path>feature</path>
+					<dryRun>${testonly}</dryRun>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>site</goal>
+						</goals>
+						<phase>site</phase>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
