--- a/example/module/plugin.xml
+++ b/example/module/plugin.xml
@@ -18,7 +18,7 @@
          <action
                label="&amp;Sample Action"
                icon="icons/sample.gif"
-               class="githubmavenexamplemodule.actions.SampleAction"
+               class="github.maven.example.module.actions.SampleAction"
                tooltip="Hello, Eclipse world"
                menubarPath="sampleMenu/sampleGroup"
                toolbarPath="sampleGroup"
