--- a/example/pom.xml
+++ b/example/pom.xml
@@ -181,16 +181,32 @@
 								maven-project-info-reports-plugin
 							</artifactId>
 							<version>2.5</version>
+							<configuration>
+								<!--webAccessUrl>https://github.com/FunThomas424242/github-maven-example</webAccessUrl>
+								<anonymousConnection>scm:git:git://github.com/funthomas424242/github-maven-example.git</anonymousConnection>
+								<developerConnection>scm:git:git@github.com:funthomas424242/github-maven-example.git</developerConnection-->
+								<webAccessUrl>${project.scm.url}</webAccessUrl>
+								<anonymousConnection>${project.scm.connection}</anonymousConnection>
+								<developerConnection>${project.scm.developerConnection}</developerConnection>
+							</configuration>
 							<reportSets>
 								<reportSet>
 									<reports>
-										<!--report>dependencies</report -->
+										<report>summary</report>
 										<report>license</report>
 										<report>scm</report>
+										<report>cim</report>
+										<report>issue-tracking</report>
+										<report>distribution-management</report>
 										<report>project-team</report>
 									</reports>
 								</reportSet>
 							</reportSets>
+						</plugin>
+						<plugin>
+							<groupId>org.apache.maven.plugins</groupId>
+							<artifactId>maven-javadoc-plugin</artifactId>
+							<version>2.8.1</version>
 						</plugin>
 					</reportPlugins>
 				</configuration>
