--- a/example/pom.xml
+++ b/example/pom.xml
@@ -8,7 +8,7 @@
 	<packaging>pom</packaging>
 
 	<name>GitHub Maven Plugin Example</name>
-	<description>Project to demonstrate GitHub Maven plugins</description>
+	<description>Multi Module Project (Eclipse Plugin, Feature + Update Site) to demonstrate GitHub Maven plugins</description>
 	<url>http://funthomas424242.github.com/github-maven-example</url>
 
 	<prerequisites>
@@ -181,16 +181,32 @@
 								maven-project-info-reports-plugin
 							</artifactId>
 							<version>2.5</version>
+							<configuration>
+								<webAccessUrl>https://github.com/FunThomas424242/github-maven-example</webAccessUrl>
+								<anonymousConnection>scm:git:git://github.com/funthomas424242/github-maven-example.git</anonymousConnection>
+								<developerConnection>scm:git:git@github.com:funthomas424242/github-maven-example.git</developerConnection>
+								<!-- does not work webAccessUrl>${project.scm.url}</webAccessUrl>
+								<anonymousConnection>${project.scm.connection}</anonymousConnection>
+								<developerConnection>${project.scm.developerConnection}</developerConnection-->
+							</configuration>
 							<reportSets>
 								<reportSet>
 									<reports>
-										<!--report>dependencies</report -->
+										<report>summary</report>
 										<report>license</report>
 										<report>scm</report>
+										<report>cim</report>
+										<report>issue-tracking</report>
+										<report>distribution-management</report>
 										<report>project-team</report>
 									</reports>
 								</reportSet>
 							</reportSets>
+						</plugin>
+						<plugin>
+							<groupId>org.apache.maven.plugins</groupId>
+							<artifactId>maven-javadoc-plugin</artifactId>
+							<version>2.8.1</version>
 						</plugin>
 					</reportPlugins>
 				</configuration>
