mvn pom location added

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,3 +15,4 @@ env:
   
 language: java
 # script: "ant -Djava.util.logging.config.file='logging.properties' -DrootRepository='git:https://github.com/FunThomas424242/gedcoml.git'"
+script: "mvn -f example/pom.xml clean install site"
